tests/paczka1/fuzzy1/45253360.err
Error in line 1: anQZgba A797 84,01
Error in line 6: wyx41DvdKC S405 25,0
Error in line 10: wyx41DvdKC S304 37,2
Error in line 24: gOSiLjI2 A797 9,13
Error in line 31: anQZgba S304 30,9
Error in line 17: mYTF S134 133,1
